WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228926
REGRESSION (
r280726
): [ Big Sur wk1 ] 25 imported/w3c/web-platform-tests/fetch/ failing
https://bugs.webkit.org/show_bug.cgi?id=228926
Summary
REGRESSION (r280726): [ Big Sur wk1 ] 25 imported/w3c/web-platform-tests/fetc...
Truitt Savell
Reported
2021-08-09 15:03:31 PDT
imported/w3c/web-platform-tests/cors/304.htm [ Failure ] imported/w3c/web-platform-tests/fetch/api/basic/conditional-get.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/basic/conditional-get.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-default.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-default.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-force-cache.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-force-cache.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-only-if-cached.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-only-if-cached.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-reload.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/request/request-cache-reload.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/304-update.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/304-update.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/freshness.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/freshness.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/heuristic.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/heuristic.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/invalidate.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/invalidate.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/split-cache.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/status.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/status.any.worker.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/vary.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/http-cache/vary.any.worker.html [ Failure ] imported/w3c/web-platform-tests/html/cross-origin-embedder-policy/credentialless/cache.tentative.html [ Failure ] These 25 tests began failing after the changes in
https://trac.webkit.org/changeset/280726/webkit
Build:
https://build.webkit.org/#/builders/48/builds/4449
Results:
https://build.webkit.org/results/Apple-BigSur-Release-WK1-Tests/r280726%20(4449)/results.html
Attachments
Patch
(1.56 KB, patch)
2021-08-10 12:47 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Update comments
(1.98 KB, patch)
2021-08-10 15:20 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Patch
(2.19 KB, patch)
2021-08-11 06:55 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing - beefed up change log
(2.36 KB, patch)
2021-08-12 01:32 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Rebasing
(2.30 KB, patch)
2021-08-12 02:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-09 15:19:29 PDT
<
rdar://problem/81715332
>
Truitt Savell
Comment 2
2021-08-10 10:04:57 PDT
Also this API tests is failing sense
r280726
TestWebKitAPI.AudioRoutingArbitration.Updating History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AudioRoutingArbitration.Updating
/Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AudioRoutingArbitration.mm:152 Expected: (arbitrationUpdateTime) < ([webView _audioRoutingArbitrationUpdateTime]), actual: 1.62861e+09 vs 1.62861e+09 Arbitration was not updated
Peng Liu
Comment 3
2021-08-10 12:34:10 PDT
(In reply to Truitt Savell from
comment #2
)
> Also this API tests is failing sense
r280726
> > TestWebKitAPI.AudioRoutingArbitration.Updating > > History: >
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI
. > AudioRoutingArbitration.Updating > > /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/AudioRoutingArbitration.mm:152 > Expected: (arbitrationUpdateTime) < ([webView > _audioRoutingArbitrationUpdateTime]), actual: 1.62861e+09 vs 1.62861e+09 > Arbitration was not updated
File
bug 228966
to track this failure.
Peng Liu
Comment 4
2021-08-10 12:47:52 PDT
Created
attachment 435282
[details]
Patch
Peng Liu
Comment 5
2021-08-10 15:20:40 PDT
Created
attachment 435305
[details]
Update comments
EWS
Comment 6
2021-08-10 23:10:34 PDT
Committed
r280884
(
240421@main
): <
https://commits.webkit.org/240421@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435305
[details]
.
Peng Liu
Comment 7
2021-08-10 23:12:00 PDT
Reopen this bug because the issue has not been resolved yet.
youenn fablet
Comment 8
2021-08-11 06:55:14 PDT
Created
attachment 435340
[details]
Patch
youenn fablet
Comment 9
2021-08-12 01:32:25 PDT
Created
attachment 435402
[details]
Patch for landing - beefed up change log
youenn fablet
Comment 10
2021-08-12 02:45:46 PDT
Not sure why AS EWS bot is not happy with the patch it used to be happy with yesterday. Let's land it and I'll revert it if builders are not happy with it.
youenn fablet
Comment 11
2021-08-12 02:53:54 PDT
Created
attachment 435405
[details]
Rebasing
EWS
Comment 12
2021-08-12 04:44:03 PDT
Committed
r280961
(
240467@main
): <
https://commits.webkit.org/240467@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435405
[details]
.
Alexey Proskuryakov
Comment 13
2021-08-12 10:19:05 PDT
Comment on
attachment 435405
[details]
Rebasing View in context:
https://bugs.webkit.org/attachment.cgi?id=435405&action=review
> Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.mm:52 > +#if PLATFORM(MAC)
Does this do the right thing for macCatalyst?
Peng Liu
Comment 14
2021-08-12 10:51:43 PDT
Comment on
attachment 435405
[details]
Rebasing View in context:
https://bugs.webkit.org/attachment.cgi?id=435405&action=review
>> Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.mm:52 >> +#if PLATFORM(MAC) > > Does this do the right thing for macCatalyst?
Confirmed with Tim. This patch is correct. macCatalyst will use the #else branch as expected.
Tim Horton
Comment 15
2021-08-12 11:02:45 PDT
(In reply to Peng Liu from
comment #14
)
> Comment on
attachment 435405
[details]
> Rebasing > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=435405&action=review
> > >> Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.mm:52 > >> +#if PLATFORM(MAC) > > > > Does this do the right thing for macCatalyst? > > Confirmed with Tim. This patch is correct. macCatalyst will use the #else > branch as expected.
"Correct" is a strong word :) But it doesn't /matter/.
Tim Horton
Comment 16
2021-08-12 11:03:52 PDT
(In reply to Tim Horton from
comment #15
)
> (In reply to Peng Liu from
comment #14
) > > Comment on
attachment 435405
[details]
> > Rebasing > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=435405&action=review
> > > > >> Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.mm:52 > > >> +#if PLATFORM(MAC) > > > > > > Does this do the right thing for macCatalyst? > > > > Confirmed with Tim. This patch is correct. macCatalyst will use the #else > > branch as expected. > > "Correct" is a strong word :) But it doesn't /matter/.
(except for local builds)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug