REGRESSION (r280726): [ Big Sur wk1 ] 25 imported/w3c/web-platform-tests/fetch/ failing https://bugs.webkit.org/show_bug.cgi?id=228926

Reviewed by Jer Noble.

Revert a part of r280726 while investigating the test failures.

* WebView/WebPreferencesDefaultValues.mm:
(WebKit::isFeatureFlagEnabled):


Canonical link: https://commits.webkit.org/240421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280884 268f45cc-cd09-0410-ab3c-d52691b4dbfc